fixed bug due to change of cause checking

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(summary,Hist)
 S3method(summary,prodlim)
 export(EventHistory.frame)
 export(Hist)
+export(List2Matrix)
 export(PercentAxis)
 export(SimCompRisk)
 export(SimSurv)
