--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,37 @@ export(strip.terms)
 export(survModel)
 import(lava)
 importFrom(Rcpp,sourceCpp)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,polygon)
+importFrom(graphics,rect)
+importFrom(graphics,segments)
+importFrom(graphics,strheight)
+importFrom(graphics,strwidth)
+importFrom(graphics,text)
+importFrom(stats,.getXlevels)
+importFrom(stats,delete.response)
+importFrom(stats,drop.terms)
+importFrom(stats,formula)
+importFrom(stats,get_all_vars)
+importFrom(stats,median)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,na.omit)
+importFrom(stats,pchisq)
+importFrom(stats,predict)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,reformulate)
+importFrom(stats,terms)
+importFrom(stats,update)
+importFrom(stats,update.formula)
 importFrom(survival,Surv)
 importFrom(survival,cluster)
 importFrom(survival,survdiff)
