new argument type for prodlim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,8 +44,10 @@ export(plotCompetingRiskModel)
 export(plotIllnessDeathModel)
 export(predictSurvIndividual)
 export(prodlim)
+export(redist)
 export(row.match)
 export(sindex)
+export(stopTime)
 export(strip.terms)
 export(survModel)
 import(lava)
