--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(SimSurv)
 export(SmartControl)
 export(atRisk)
 export(backGround)
+export(checkCauses)
 export(confInt)
 export(crModel)
 export(dimColor)
