--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(strip.terms)
 export(survModel)
 import(lava)
 importFrom(Rcpp,sourceCpp)
+importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
