towards a much better summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(row.match)
 export(sindex)
 export(stopTime)
 export(strip.terms)
+export(summary.prodlim)
 export(survModel)
 import(lava)
 importFrom(Rcpp,sourceCpp)
