started fixing number at risks labels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,10 +41,12 @@ export(meanNeighbors)
 export(model.design)
 export(neighborhood)
 export(parseSpecialNames)
+export(plot.prodlim)
 export(plotCompetingRiskModel)
 export(plotIllnessDeathModel)
 export(predictSurvIndividual)
 export(prodlim)
+export(quantile.prodlim)
 export(redist)
 export(row.match)
 export(sindex)
