--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(stopTime)
 export(strip.terms)
 export(summary.prodlim)
 export(survModel)
+import(data.table)
 import(lava)
 importFrom(Rcpp,sourceCpp)
 importFrom(grDevices,rainbow)
