--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,8 @@ importFrom(Rcpp,sourceCpp)
 importFrom(grDevices,rainbow)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
+importFrom(graphics,grconvertX)
+importFrom(graphics,grconvertY)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
