fixed quantile prints

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(meanNeighbors)
 export(model.design)
 export(neighborhood)
 export(parseSpecialNames)
+export(plot.Hist)
 export(plot.prodlim)
 export(plotCompetingRiskModel)
 export(plotIllnessDeathModel)
