--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     lava
 LinkingTo: Rcpp
 Maintainer: Thomas A. Gerds <tag@biostat.ku.dk>
+BugReports: https://github.com/tagteam/prodlim/issues
 License: GPL (>= 2)
 Packaged: Wed Oct 3 20:15:28 2007; tag
 RoxygenNote: 7.2.3
