--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(print,summary.prodlim)
 S3method(quantile,prodlim)
 S3method(summary,Hist)
 S3method(summary,prodlim)
+export('[.Hist')
 export(EventHistory.frame)
 export(Hist)
 export(List2Matrix)
@@ -28,15 +29,23 @@ export(checkCauses)
 export(confInt)
 export(crModel)
 export(dimColor)
+export(events.Hist)
+export(events.prodlim)
 export(getEvent)
 export(getStates)
+export(head.Hist)
+export(is.na.Hist)
 export(jackknife)
 export(jackknife.competing.risks)
 export(jackknife.survival)
 export(leaveOneOut)
 export(leaveOneOut.competing.risks)
 export(leaveOneOut.survival)
+export(lifeTab.competing.risks)
+export(lifeTab.survival)
+export(lines.prodlim)
 export(markTime)
+export(mean.prodlim)
 export(meanNeighbors)
 export(model.design)
 export(neighborhood)
@@ -52,9 +61,12 @@ export(redist)
 export(row.match)
 export(sindex)
 export(stopTime)
+export(str.Hist)
 export(strip.terms)
+export(subset.Hist)
 export(summary.prodlim)
 export(survModel)
+export(tail.Hist)
 import(data.table)
 import(lava)
 importFrom(Rcpp,sourceCpp)
