new function to calculate median fup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(predict,prodlim)
 S3method(print,Hist)
 S3method(print,IntIndex)
 S3method(print,neighborhood)
+S3method(print,potential.followup)
 S3method(print,prodlim)
 S3method(print,quantile.prodlim)
 S3method(print,summary.prodlim)
@@ -29,6 +30,7 @@ export(checkCauses)
 export(confInt)
 export(crModel)
 export(dimColor)
+export(followup)
 export(getEvent)
 export(getStates)
 export(head.Hist)
